Bug 13015        Add a sash between the search-builder and app-tab. The sash is visible when the search-builder is visible. It can compress the search-builder. It has a min height. The sash can't move down for we think the search-builder is not allowed to becmoe more bigger.
http://bugzilla.zimbra.com/show_bug.cgi?id=13015

--- a/ZimbraWebClient/WebRoot/admin_skins/_base/base/skin.css
+++ b/ZimbraWebClient/WebRoot/admin_skins/_base/base/skin.css
@@ -73,6 +73,11 @@ body						{	@ChromeBg@	}
 
 #skin_container_login_msg { height: 39; margin: 5; padding: 5;  }
 
+/* search builder app sash*/
+#skin_tr_sb_app_sash    {}
+#skin_td_sb_app_sash    { text-align:center; vertical-align:middle; height:@SashSize@; }
+#skin_container_sb_app_sash   {@SkinBorderSBSash@ }
+
 /** User Name section **/
 #skin_container_username				{	height:auto; padding-top:2px;	}
 #skin_container_username *				{	@SkinTextUsername@	}
